[gd_scene load_steps=7 format=2]

[ext_resource path="res://AdsTest.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/nav_font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
use_filter = true
font_data = ExtResource( 3 )

[node name="AdsTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
text = "SBB Ads Test"
align = 1
valign = 1

[node name="Log" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 400.0
margin_right = 350.0
margin_bottom = 1070.0
custom_fonts/normal_font = SubResource( 2 )
scroll_following = true

[node name="MenuBtn" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -180.0
margin_right = 180.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 4 )
text = "MENU"

[node name="RewardedAdBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -330.0
margin_top = 223.0
margin_right = -30.0
margin_bottom = 373.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Load Rewarded Ad"
clip_text = true

[node name="InterstitialAdBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 30.0
margin_top = 223.0
margin_right = 330.0
margin_bottom = 373.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Load Interstitial Ad"
clip_text = true
[connection signal="pressed" from="MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="RewardedAdBtn" to="." method="_on_RewardedAdBtn_pressed"]
[connection signal="pressed" from="InterstitialAdBtn" to="." method="_on_InterstitialAdBtn_pressed"]
